--- a/package.json
+++ b/package.json
@@ -19,8 +19,11 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@sweetalert2/ngx-sweetalert2": "^5.0.1",
+    "angular-sweetalert-service": "^2.0.2",
     "core-js": "^2.5.4",
     "rxjs": "~6.3.3",
+    "sweetalert2": "^8.8.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
   },
