--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@sweetalert2/ngx-sweetalert2": "^5.0.1",
+    "@syncfusion/ej2-angular-calendars": "^17.1.43",
     "angular-sweetalert-service": "^2.0.2",
+    "bootstrap": "4.2.1",
     "core-js": "^2.5.4",
     "ng2-search-filter": "^0.4.7",
+    "ngx-bootstrap": "^4.1.1",
     "rxjs": "^6.3.3",
     "sweetalert2": "^8.8.3",
     "tslib": "^1.9.0",
