--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "@sweetalert2/ngx-sweetalert2": "^5.0.1",
     "@syncfusion/ej2-angular-calendars": "^17.1.43",
     "angular-sweetalert-service": "^2.0.2",
+    "angular2": "^2.0.0-beta.21",
+    "angularfire2": "^5.1.3",
     "bootstrap": "4.2.1",
     "core-js": "^2.5.4",
+    "firebase": "^6.0.2",
     "ng2-search-filter": "^0.4.7",
     "ngx-bootstrap": "^4.1.1",
     "rxjs": "^6.3.3",
