--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bootstrap": "4.2.1",
     "core-js": "^2.5.4",
     "firebase": "^6.0.2",
+    "jquery": "^3.4.1",
     "ng2-search-filter": "^0.4.7",
     "ngx-bootstrap": "^4.1.1",
     "rxjs": "^6.3.3",
@@ -41,6 +42,7 @@
     "@angular/language-service": "~7.2.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/jquery": "^3.3.29",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
